# tax_chatbot

./: .gitignore  AI Agent 개발 직무 자격 요건.txt  AI 개발 직무 자격 요건.txt  README.md  chat.py  compose.yml  docker-compose.yml  income_tax_root.md  llm.py  promtail-config.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: db.py  deps.py  main.py  models.py  schemas.py
backend/app/agents/: house.py  income.py  income_tax_graph.py  income_tax_test.ipynb  llm.py  multi_agent_graph.py  real_estate.py  real_estate_tax_graph.py  supervisor.py
backend/app/agents/legacy/: income_tax_graph.py  multi_agent_graph.py  real_estate_tax_graph.py
backend/app/core/: config.py  security.py
backend/app/routers/: auth.py  chat.py  chat_test.ipynb
backend/reference/real_estate_tax/: chroma.sqlite3
backend/tests/: test_router.py
frontend/: dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: CodeBlock.tsx  MessageItem.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/components/auth/: BackgroundDecor.tsx  Header.tsx  Input.tsx
frontend/lib/: api.ts  auth.ts  config.ts  types.ts
