[project]
name = "tax-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-pinecone>=0.2.12",
    "langchain-upstage>=0.7.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
