[project]
name = "tax-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.110.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-pinecone>=0.2.12",
    "langchain-upstage>=0.7.3",
    "langgraph>=0.2.30",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.11.9",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.27.0",
    "ipykernel>=7.1.0",
]
